--- a/dbtest2/Views/Home/TableList.cshtml
+++ b/dbtest2/Views/Home/TableList.cshtml
@@ -1,15 +1,4 @@
-﻿@*@{
-    ViewBag.Title = "About";
-}
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
-
-<p>Use this area to provide additional information.</p>*@
-
-
-
-
-@{
+﻿@{
     var dt = ViewData["dt"] as System.Data.DataTable;
 }
 <div class="container-fluid">
@@ -39,53 +28,19 @@
                                 </tr>
                             }
                         </tbody>
-                        @*<tbody>
-                                <tr>
-                                    <td>1</td>
-                                    <td>Dakota Rice</td>
-                                    <td>$36,738</td>
-                                    <td>Niger</td>
-                                    <td>Oud-Turnhout</td>
-                                </tr>
-                                <tr>
-                                    <td>2</td>
-                                    <td>Minerva Hooper</td>
-                                    <td>$23,789</td>
-                                    <td>Curaçao</td>
-                                    <td>Sinaai-Waas</td>
-                                </tr>
-                                <tr>
-                                    <td>3</td>
-                                    <td>Sage Rodriguez</td>
-                                    <td>$56,142</td>
-                                    <td>Netherlands</td>
-                                    <td>Baileux</td>
-                                </tr>
-                                <tr>
-                                    <td>4</td>
-                                    <td>Philip Chaney</td>
-                                    <td>$38,735</td>
-                                    <td>Korea, South</td>
-                                    <td>Overland Park</td>
-                                </tr>
-                                <tr>
-                                    <td>5</td>
-                                    <td>Doris Greene</td>
-                                    <td>$63,542</td>
-                                    <td>Malawi</td>
-                                    <td>Feldkirchen in Kärnten</td>
-                                </tr>
-                                <tr>
-                                    <td>6</td>
-                                    <td>Mason Porter</td>
-                                    <td>$78,615</td>
-                                    <td>Chile</td>
-                                    <td>Gloucester</td>
-                                </tr>
-                            </tbody>*@
                     </table>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+
+@*<div>
+    <form id="form1" method="post" action="/home/tablechange">
+        <input name="car_id" type="text" value="1" />
+        <input name="carnum" type="text" value="1111" />
+
+        <button type="submit" , class="btn btn-sm btn-primary">변경 전송</button>
+    </form>
+</div>*@
