--- a/dbtest2/Views/Shared/_Layout.cshtml
+++ b/dbtest2/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
             <div class="sidebar-wrapper">
                 <div class="logo">
                     <a href="http://www.creative-tim.com" class="simple-text">
-                        Creative Tim
+                        주차관리 시스템
                     </a>
                 </div>
                 <ul class="nav">
@@ -59,18 +59,18 @@
                         </a>
                     </li>
                     <li>
-                        <a class="nav-link" href="./user.html">
+                        <a class="nav-link" href="/home/create">
                             <i class="nc-icon nc-circle-09"></i>
-                            <p>User Profile</p>
+                            <p>입차 하기</p>
                         </a>
                     </li>
                     <li>
                         <a class="nav-link" href="/home/tablelist">
                             <i class="nc-icon nc-notes"></i>
-                            <p>Table List</p>
+                            <p>차량 보기</p>
                         </a>
                     </li>
-                    <li>
+                    @*<li>
                         <a class="nav-link" href="./typography.html">
                             <i class="nc-icon nc-paper-2"></i>
                             <p>Typography</p>
@@ -99,14 +99,14 @@
                             <i class="nc-icon nc-alien-33"></i>
                             <p>Upgrade to PRO</p>
                         </a>
-                    </li>
+                    </li>*@
                 </ul>
             </div>
 
         </div>
         <div class="main-panel">
             <!-- Navbar -->
-            <nav class="navbar navbar-expand-lg " color-on-scroll="500">
+            @*<nav class="navbar navbar-expand-lg " color-on-scroll="500">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="#pablo"> Dashboard </a>
                     <button href="" class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
@@ -170,14 +170,14 @@
                         </ul>
                     </div>
                 </div>
-            </nav>
+            </nav>*@
             <!-- End Navbar -->
             <div class="content">
                 <div class="container-fluid">
                     @RenderBody()
                 </div>
             </div>
-            <footer class="footer">
+            @*<footer class="footer">
                 <div class="container-fluid">
                     <nav>
                         <ul class="footer-menu">
@@ -211,7 +211,7 @@
                         </p>
                     </nav>
                 </div>
-            </footer>
+            </footer>*@
         </div>
     </div>
     <!--   -->
@@ -323,51 +323,3 @@
 </html>
 
 
-
-
-
-
-
-@*<!DOCTYPE html>
-    <html>
-    <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>@ViewBag.Title - 내 ASP.NET 애플리케이션</title>
-        @Styles.Render("~/Content/css")
-        @Scripts.Render("~/bundles/modernizr")
-    </head>
-    <body>
-        <div class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    @Html.ActionLink("애플리케이션 이름", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-                </div>
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                        <li>@Html.ActionLink("홈", "Index", "Home")</li>
-                        <li>@Html.ActionLink("정보", "About", "Home")</li>
-                        <li>@Html.ActionLink("연락처", "Contact", "Home")</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="container body-content">
-            @RenderBody()
-            <hr />
-            <footer>
-                <p>&copy; @DateTime.Now.Year - 내 ASP.NET 애플리케이션</p>
-            </footer>
-        </div>
-
-        @Scripts.Render("~/bundles/jquery")
-        @Scripts.Render("~/bundles/bootstrap")
-        @RenderSection("scripts", required: false)
-    </body>
-    </html>*@
