[#2] 쿼리로 db 삽입, 조회
todo: 페이지에서 정보 입력받아 db 삽입

--- a/dbtest2/Views/Home/Create.cshtml
+++ b/dbtest2/Views/Home/Create.cshtml
@@ -6,7 +6,6 @@
 
 <h2>입차하기</h2>
 
-
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
@@ -39,13 +38,13 @@
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.OutTime, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.OutTime, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.OutTime, "", new { @class = "text-danger" })
-            </div>
-        </div>
+        @*<div class="form-group">
+                @Html.LabelFor(model => model.OutTime, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.OutTime, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.OutTime, "", new { @class = "text-danger" })
+                </div>
+            </div>*@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="등록" class="btn btn-default" />
@@ -62,3 +61,22 @@
 <script src="~/Scripts/jquery-3.4.1.min.js"></script>
 <script src="~/Scripts/jquery.validate.min.js"></script>
 <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+
+
+
+
+
+
+
+@*<div class="form-horizontal">
+        <h4>Car</h4>
+        <div>
+            <form id="form1" method="post" action="/home/create">
+                <input name="car_id" type="text" value="" />
+                <input name="carnum" type="text" value="" />
+                <input name="intime" type="text" value="" />
+
+                <button type="submit" , class="btn btn-sm btn-primary">입차</button>
+            </form>
+        </div>
+    </div>*@
