--- a/dbtest2/Views/Shared/_Layout.cshtml
+++ b/dbtest2/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
             @* @await Component.InvokeAsync("LeftMenu")*@
             <div class="sidebar-wrapper">
                 <div class="logo">
-                    <a href="http://www.creative-tim.com" class="simple-text">
+                    <a href="/home/index" class="simple-text">
                         주차관리 시스템
                     </a>
                 </div>
