--- a/dbtest2/Views/Login/Register.cshtml
+++ b/dbtest2/Views/Login/Register.cshtml
@@ -1,9 +1,13 @@
-﻿<section class="login-block">
+﻿@{
+    string msg = ViewData["msg"] as string;
+}
+
+<section class="login-block">
     <!-- Container-fluid starts -->
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12">
-                <form class="md-float-material form-material">
+                <form id="form1" method="post" action="/login/register" class="md-float-material form-material">
                     <div class="text-center">
                         <img src="/Content/img/login/logo.png" alt="logo.png">
                     </div>
@@ -12,11 +16,15 @@
                             <div class="row m-b-20">
                                 <div class="col-md-12">
                                     <h3 class="text-center txt-primary">Sign up</h3>
+                                    @if (string.IsNullOrWhiteSpace(msg) == false)
+                                    {
+                                        <div class="alert alert-danger">@msg</div>
+                                    }
                                 </div>
                             </div>
                             <div class="form-group form-primary">
                                 <label class="float-label">Username</label>
-                                <input type="text" name="user-name" class="form-control" placeholder="Choose Username">
+                                <input type="text" name="user_name" class="form-control" placeholder="Choose Username">
                                 <span class="form-bar"></span>
                             </div>
                             <div class="form-group form-primary">
@@ -35,14 +43,14 @@
                                 <div class="col-sm-6">
                                     <div class="form-group form-primary">
                                         <label class="float-label">Confirm Password</label>
-                                        <input type="password" name="confirm-password" class="form-control" placeholder="Confirm Password">
+                                        <input type="password" name="password2" class="form-control" placeholder="Confirm Password">
                                         <span class="form-bar"></span>
                                     </div>
                                 </div>
                             </div>
                             <div class="row m-t-30">
                                 <div class="col-md-12">
-                                    <button type="button" class="btn btn-primary btn-md btn-block waves-effect text-center m-b-20">Sign up now</button>
+                                    <button name="submit" type="submit" class="btn btn-primary btn-md btn-block waves-effect text-center m-b-20">Sign up now</button>
                                 </div>
                             </div>
                             <hr />
