--- a/dbtest2/Views/Home/LoginSuccess.cshtml
+++ b/dbtest2/Views/Home/LoginSuccess.cshtml
@@ -1,5 +1,7 @@
-﻿@{
-    ViewBag.Title = "Contact";
+﻿<h1>로그인에 성공하였습니다.</h1>
+
+@*@{
+    ViewBag.Title = "LoginSuccess";
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
@@ -14,4 +16,4 @@
 <address>
     <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
     <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+</address>*@
