--- a/dbtest2/Views/Login/Register.cshtml
+++ b/dbtest2/Views/Login/Register.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model dbtest2.Models.Login.UserModel
+
+@{
     string msg = ViewData["msg"] as string;
 }
 
@@ -7,7 +9,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12">
-                <form id="form1" method="post" action="/login/register" class="md-float-material form-material">
+                <form id="form1" method="post" class="md-float-material form-material" asp-controller="Login" asp-action="Register">
                     <div class="text-center">
                         <img src="/Content/img/login/logo.png" alt="logo.png">
                     </div>
@@ -24,19 +26,19 @@
                             </div>
                             <div class="form-group form-primary">
                                 <label class="float-label">Username</label>
-                                <input type="text" name="user_name" class="form-control" placeholder="Choose Username">
+                                <input type="text" name="user_name" class="form-control" asp-for="User_Name" placeholder="Choose Username">
                                 <span class="form-bar"></span>
                             </div>
                             <div class="form-group form-primary">
                                 <label class="float-label">Email Address</label>
-                                <input type="text" name="email" class="form-control" placeholder="Your Email Address">
+                                <input type="text" name="email" class="form-control" asp-for="Email" placeholder="Your Email Address">
                                 <span class="form-bar"></span>
                             </div>
                             <div class="row">
                                 <div class="col-sm-6">
                                     <div class="form-group form-primary">
                                         <label class="float-label">Password</label>
-                                        <input type="password" name="password" class="form-control" placeholder="Password">
+                                        <input type="password" name="password" class="form-control" asp-for="Password" placeholder="Password">
                                         <span class="form-bar"></span>
                                     </div>
                                 </div>
