--- a/dbtest2/Views/Login/Login.cshtml
+++ b/dbtest2/Views/Login/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model dbtest2.ViewModel.LoginViewModel
+﻿@*@model dbtest2.ViewModel.LoginViewModel*@
 
 <section class="login-block">
     <!-- Container-fluid starts -->
@@ -7,7 +7,7 @@
             <div class="col-sm-12">
                 <!-- Authentication card start -->
 
-                <form class="md-float-material form-material" method="post" asp-controller="Login" asp-action="Login">
+                <form class="md-float-material form-material" method="post" action="/login/login">
                     <div class="text-center">
                         <img src="/Content/img/login/logo.png" alt="logo.png">
                     </div>
@@ -23,13 +23,13 @@
 
                             <div class="form-group form-primary">
                                 <label class="float-label">Email Address</label>
-                                <input type="text" asp-for="Email" name="email" class="form-control" placeholder="Your Email Address">
-                                <span class="form-bar" asp-validation-for="Email"></span>
+                                <input type="text" name="email" class="form-control" placeholder="Your Email Address">
+                                <span class="form-bar" ></span>
                             </div>
                             <div class="form-group form-primary">
                                 <label class="float-label">Password</label>
-                                <input type="password" asp-for="Password" name="password" class="form-control" placeholder="Password">
-                                <span class="form-bar" asp-validation-for="Password"></span>
+                                <input type="password" name="password" class="form-control" placeholder="Password">
+                                <span class="form-bar" ></span>
                             </div>
                             @*<div class="row m-t-25 text-left">
                     <div class="col-12">
