--- a/dbtest2/Views/Shared/_Layout.cshtml
+++ b/dbtest2/Views/Shared/_Layout.cshtml
@@ -38,12 +38,25 @@
 
 <body>
     <div class="wrapper">
+        @*<header class="topbar" data-navbarbg="skin6">
+                <ul class="navbar-nav float-right">
+                    <a class="nav-link dropdown-toggle" href="javascript:void(0)" data-toggle="dropdown"
+                       aria-haspopup="true" aria-expanded="false">
+                        <img src="~/Content/img/login/user_pic.jpg" alt="user" class="rounded-circle"
+                             width="40">
+                        <span class="ml-2 d-none d-lg-inline-block">
+                            <span>Hello,</span> <span class="text-dark">BlahBlah</span> <i data-feather="chevron-down"
+                                                                                           class="svg-icon"></i>
+                        </span>
+                    </a>
+                </ul>
+            </header>*@
         <div class="sidebar" data-image="../assets/img/sidebar-5.jpg">
             <!--
-        Tip 1: You can change the color of the sidebar using: data-color="purple | blue | green | orange | red"
+                Tip 1: You can change the color of the sidebar using: data-color="purple | blue | green | orange | red"
 
-        Tip 2: you can also add an image using data-image tag
-    -->
+                Tip 2: you can also add an image using data-image tag
+            -->
             @* @await Component.InvokeAsync("LeftMenu")*@
             <div class="sidebar-wrapper">
                 <div class="logo">
@@ -70,120 +83,159 @@
                             <p>차량 보기</p>
                         </a>
                     </li>
-                    <li>
-                        <a class="nav-link" href="/login/login">
-                            <i class="nc-icon nc-notes"></i>
-                            <p>Login</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="nav-link" href="/login/register">
-                            <i class="nc-icon nc-notes"></i>
-                            <p>Register</p>
-                        </a>
-                    </li>
+                    @if (User.Identity.IsAuthenticated == false)
+                    {
+                        <li>
+                            <a class="nav-link" href="/login/login">
+                                <i class="nc-icon nc-notes"></i>
+                                <p>Login</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="/login/register">
+                                <i class="nc-icon nc-notes"></i>
+                                <p>Register</p>
+                            </a>
+                        </li>
+                    }
+                    @if (User.Identity.IsAuthenticated) //로그인 성공
+                    {
+                        <li>
+                            <a class="nav-link" href="/login/logout">
+                                <i class="nc-icon nc-notes"></i>
+                                <p>Logout</p>
+                            </a>
+                        </li>
+                    }
 
                     @*<li>
-            <a class="nav-link" href="./typography.html">
-                <i class="nc-icon nc-paper-2"></i>
-                <p>Typography</p>
-            </a>
-        </li>
-        <li>
-            <a class="nav-link" href="./icons.html">
-                <i class="nc-icon nc-atom"></i>
-                <p>Icons</p>
-            </a>
-        </li>
-        <li>
-            <a class="nav-link" href="./maps.html">
-                <i class="nc-icon nc-pin-3"></i>
-                <p>Maps</p>
-            </a>
-        </li>
-        <li>
-            <a class="nav-link" href="./notifications.html">
-                <i class="nc-icon nc-bell-55"></i>
-                <p>Notifications</p>
-            </a>
-        </li>
-        <li class="nav-item active active-pro">
-            <a class="nav-link active" href="upgrade.html">
-                <i class="nc-icon nc-alien-33"></i>
-                <p>Upgrade to PRO</p>
-            </a>
-        </li>*@
+                            <a class="nav-link" href="./typography.html">
+                                <i class="nc-icon nc-paper-2"></i>
+                                <p>Typography</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="./icons.html">
+                                <i class="nc-icon nc-atom"></i>
+                                <p>Icons</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="./maps.html">
+                                <i class="nc-icon nc-pin-3"></i>
+                                <p>Maps</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="./notifications.html">
+                                <i class="nc-icon nc-bell-55"></i>
+                                <p>Notifications</p>
+                            </a>
+                        </li>
+                        <li class="nav-item active active-pro">
+                            <a class="nav-link active" href="upgrade.html">
+                                <i class="nc-icon nc-alien-33"></i>
+                                <p>Upgrade to PRO</p>
+                            </a>
+                        </li>*@
                 </ul>
             </div>
 
         </div>
         <div class="main-panel">
             <!-- Navbar -->
-            @*<nav class="navbar navbar-expand-lg " color-on-scroll="500">
+            <nav class="navbar navbar-expand-lg " color-on-scroll="500">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="#pablo"> Dashboard </a>
-                    <button href="" class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-bar burger-lines"></span>
-                        <span class="navbar-toggler-bar burger-lines"></span>
-                        <span class="navbar-toggler-bar burger-lines"></span>
-                    </button>
+                    @*<button href="" class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-bar burger-lines"></span>
+                            <span class="navbar-toggler-bar burger-lines"></span>
+                            <span class="navbar-toggler-bar burger-lines"></span>
+                        </button>*@
                     <div class="collapse navbar-collapse justify-content-end" id="navigation">
-                        <ul class="nav navbar-nav mr-auto">
-                            <li class="nav-item">
-                                <a href="#" class="nav-link" data-toggle="dropdown">
-                                    <i class="nc-icon nc-palette"></i>
-                                    <span class="d-lg-none">Dashboard</span>
+                        <ul class="navbar-nav float-right">
+                            @if (User.Identity.IsAuthenticated) //로그인 성공
+                            {
+                                <a class="nav-link dropdown-toggle" href="javascript:void(0)" data-toggle="dropdown"
+                                   aria-haspopup="true" aria-expanded="false">
+                                    <img src="/Content/img/login/user_pic.jpg" alt="user" class="rounded-circle"
+                                         width="40">
+                                    <span class="ml-2 d-none d-lg-inline-block">
+                                        <span>Hello,</span> <span class="text-dark">@User.Identity.Name</span> <i data-feather="chevron-down"
+                                                                                                                  class="svg-icon"></i>
+                                    </span>
                                 </a>
-                            </li>
-                            <li class="dropdown nav-item">
-                                <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
-                                    <i class="nc-icon nc-planet"></i>
-                                    <span class="notification">5</span>
-                                    <span class="d-lg-none">Notification</span>
+                            }
+                            <div class="dropdown-menu dropdown-menu-right user-dd animated flipInY">
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="javascript:void(0)">
+                                    <i data-feather="user"
+                                       class="svg-icon mr-2 ml-1"></i>
+                                    My Profile
                                 </a>
-                                <ul class="dropdown-menu">
-                                    <a class="dropdown-item" href="#">Notification 1</a>
-                                    <a class="dropdown-item" href="#">Notification 2</a>
-                                    <a class="dropdown-item" href="#">Notification 3</a>
-                                    <a class="dropdown-item" href="#">Notification 4</a>
-                                    <a class="dropdown-item" href="#">Another notification</a>
-                                </ul>
-                            </li>
-                            <li class="nav-item">
-                                <a href="#" class="nav-link">
-                                    <i class="nc-icon nc-zoom-split"></i>
-                                    <span class="d-lg-block">&nbsp;Search</span>
+                                <a class="dropdown-item" href="/login/logout">
+                                    <i data-feather="power"
+                                       class="svg-icon mr-2 ml-1"></i>
+                                    Logout
                                 </a>
-                            </li>
+                            </div>
                         </ul>
-                        <ul class="navbar-nav ml-auto">
-                            <li class="nav-item">
-                                <a class="nav-link" href="#pablo">
-                                    <span class="no-icon">Account</span>
-                                </a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <span class="no-icon">Dropdown</span>
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                    <a class="dropdown-item" href="#">Action</a>
-                                    <a class="dropdown-item" href="#">Another action</a>
-                                    <a class="dropdown-item" href="#">Something</a>
-                                    <a class="dropdown-item" href="#">Something else here</a>
-                                    <div class="divider"></div>
-                                    <a class="dropdown-item" href="#">Separated link</a>
-                                </div>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#pablo">
-                                    <span class="no-icon">Log out</span>
-                                </a>
-                            </li>
-                        </ul>
+                        @*<ul class="nav navbar-nav mr-auto">
+                                <li class="nav-item">
+                                    <a href="#" class="nav-link" data-toggle="dropdown">
+                                        <i class="nc-icon nc-palette"></i>
+                                        <span class="d-lg-none">Dashboard</span>
+                                    </a>
+                                </li>
+                                <li class="dropdown nav-item">
+                                    <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
+                                        <i class="nc-icon nc-planet"></i>
+                                        <span class="notification">5</span>
+                                        <span class="d-lg-none">Notification</span>
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                        <a class="dropdown-item" href="#">Notification 1</a>
+                                        <a class="dropdown-item" href="#">Notification 2</a>
+                                        <a class="dropdown-item" href="#">Notification 3</a>
+                                        <a class="dropdown-item" href="#">Notification 4</a>
+                                        <a class="dropdown-item" href="#">Another notification</a>
+                                    </ul>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="#" class="nav-link">
+                                        <i class="nc-icon nc-zoom-split"></i>
+                                        <span class="d-lg-block">&nbsp;Search</span>
+                                    </a>
+                                </li>
+                            </ul>*@
+                        @*<ul class="navbar-nav ml-auto">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#pablo">
+                                        <span class="no-icon">Account</span>
+                                    </a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        <span class="no-icon">Dropdown</span>
+                                    </a>
+                                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                        <a class="dropdown-item" href="#">Action</a>
+                                        <a class="dropdown-item" href="#">Another action</a>
+                                        <a class="dropdown-item" href="#">Something</a>
+                                        <a class="dropdown-item" href="#">Something else here</a>
+                                        <div class="divider"></div>
+                                        <a class="dropdown-item" href="#">Separated link</a>
+                                    </div>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#pablo">
+                                        <span class="no-icon">Log out</span>
+                                    </a>
+                                </li>
+                            </ul>*@
                     </div>
                 </div>
-            </nav>*@
+            </nav>
             <!-- End Navbar -->
             <div class="content">
                 <div class="container-fluid">
@@ -191,40 +243,40 @@
                 </div>
             </div>
             @*<footer class="footer">
-                <div class="container-fluid">
-                    <nav>
-                        <ul class="footer-menu">
-                            <li>
-                                <a href="#">
-                                    Home
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Company
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Portfolio
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Blog
-                                </a>
-                            </li>
-                        </ul>
-                        <p class="copyright text-center">
-                            ©
-                            <script>
-                                document.write(new Date().getFullYear())
-                            </script>
-                            <a href="http://www.creative-tim.com">Creative Tim</a>, made with love for a better web
-                        </p>
-                    </nav>
-                </div>
-            </footer>*@
+                    <div class="container-fluid">
+                        <nav>
+                            <ul class="footer-menu">
+                                <li>
+                                    <a href="#">
+                                        Home
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        Company
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        Portfolio
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        Blog
+                                    </a>
+                                </li>
+                            </ul>
+                            <p class="copyright text-center">
+                                ©
+                                <script>
+                                    document.write(new Date().getFullYear())
+                                </script>
+                                <a href="http://www.creative-tim.com">Creative Tim</a>, made with love for a better web
+                            </p>
+                        </nav>
+                    </div>
+                </footer>*@
         </div>
     </div>
     <!--   -->
