--- a/dbtest2/Views/Shared/_Layout.cshtml
+++ b/dbtest2/Views/Shared/_Layout.cshtml
@@ -158,7 +158,7 @@
                             {
                                 <a class="nav-link dropdown-toggle" href="javascript:void(0)" data-toggle="dropdown"
                                    aria-haspopup="true" aria-expanded="false">
-                                    <img src="/Content/img/login/user_pic.jpg" alt="user" class="rounded-circle"
+                                    <img src="/Content/img/login/user.jpg" alt="user" class="rounded-circle"
                                          width="40">
                                     <span class="ml-2 d-none d-lg-inline-block">
                                         <span>Hello,</span> <span class="text-dark">@User.Identity.Name</span> <i data-feather="chevron-down"
@@ -168,7 +168,7 @@
                             }
                             <div class="dropdown-menu dropdown-menu-right user-dd animated flipInY">
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="javascript:void(0)">
+                                <a class="dropdown-item" href="/home/userprofile">
                                     <i data-feather="user"
                                        class="svg-icon mr-2 ml-1"></i>
                                     My Profile
