--- a/dbtest2/Views/Shared/_Layout.cshtml
+++ b/dbtest2/Views/Shared/_Layout.cshtml
@@ -168,7 +168,7 @@
                             }
                             <div class="dropdown-menu dropdown-menu-right user-dd animated flipInY">
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="/home/userprofile">
+                                <a class="dropdown-item" href="/login/userprofile">
                                     <i data-feather="user"
                                        class="svg-icon mr-2 ml-1"></i>
                                     My Profile
