[#2] 입차하기 페이지 입력 폼
- TableInsert 입력 폼 완성

- todo: 입력 받아서 db에 넣기

--- a/dbtest2/Views/Shared/_Layout.cshtml
+++ b/dbtest2/Views/Shared/_Layout.cshtml
@@ -72,7 +72,7 @@
                         </a>
                     </li>
                     <li>
-                        <a class="nav-link" href="/home/create">
+                        <a class="nav-link" href="/home/tableinsert">
                             <i class="nc-icon nc-circle-09"></i>
                             <p>입차 하기</p>
                         </a>
