[#2] 차량번호로 입차하기
todo: 입차하기 기능을 로그인 했을 때만 사용 가능하게,
차량 번호 입력 후 입차 버튼 누르면 차량주인에 유저정보 보이게

--- a/dbtest2/Views/Home/TableList.cshtml
+++ b/dbtest2/Views/Home/TableList.cshtml
@@ -19,11 +19,11 @@
                         <tbody>
                             @foreach (var item in Model)
                             {
-                                <tr>
-                                    <td>@item.Car_ID</td>
-                                    <td>@item.CarNum</td>
-                                    <td>@item.InTime.ToString("yyyy-MM-dd")</td>
-                                </tr>
+                            <tr>
+                                <td>@item.Car_ID</td>
+                                <td>@item.CarNum</td>
+                                <td>@item.InTime.ToString("yyyy-MM-dd HH:mm:ss")</td>
+                            </tr>
                             }
                         </tbody>
                         @*<tbody>
