[#2] 출차 시 리스트에서 삭제

--- a/dbtest2/Views/Home/TableList.cshtml
+++ b/dbtest2/Views/Home/TableList.cshtml
@@ -23,7 +23,7 @@
                                 <td>@item.Car_ID</td>
                                 <td>@item.CarNum</td>
                                 <td>@item.InTime.ToString("yyyy-MM-dd HH:mm:ss")</td>
-                                <td>@item.Owner</td>
+                                <td>@item.Owner_Name</td>
                             </tr>
                             }
                         </tbody>
