--- a/dbtest2/Views/Shared/_Layout.cshtml
+++ b/dbtest2/Views/Shared/_Layout.cshtml
@@ -78,6 +78,12 @@
                         </a>
                     </li>
                     <li>
+                        <a class="nav-link" href="/home/tabledelete">
+                            <i class="nc-icon nc-circle-09"></i>
+                            <p>출차 하기</p>
+                        </a>
+                    </li>
+                    <li>
                         <a class="nav-link" href="/home/tablelist">
                             <i class="nc-icon nc-notes"></i>
                             <p>차량 보기</p>
@@ -109,35 +115,35 @@
                     }
 
                     @*<li>
-                            <a class="nav-link" href="./typography.html">
-                                <i class="nc-icon nc-paper-2"></i>
-                                <p>Typography</p>
-                            </a>
-                        </li>
-                        <li>
-                            <a class="nav-link" href="./icons.html">
-                                <i class="nc-icon nc-atom"></i>
-                                <p>Icons</p>
-                            </a>
-                        </li>
-                        <li>
-                            <a class="nav-link" href="./maps.html">
-                                <i class="nc-icon nc-pin-3"></i>
-                                <p>Maps</p>
-                            </a>
-                        </li>
-                        <li>
-                            <a class="nav-link" href="./notifications.html">
-                                <i class="nc-icon nc-bell-55"></i>
-                                <p>Notifications</p>
-                            </a>
-                        </li>
-                        <li class="nav-item active active-pro">
-                            <a class="nav-link active" href="upgrade.html">
-                                <i class="nc-icon nc-alien-33"></i>
-                                <p>Upgrade to PRO</p>
-                            </a>
-                        </li>*@
+            <a class="nav-link" href="./typography.html">
+                <i class="nc-icon nc-paper-2"></i>
+                <p>Typography</p>
+            </a>
+        </li>
+        <li>
+            <a class="nav-link" href="./icons.html">
+                <i class="nc-icon nc-atom"></i>
+                <p>Icons</p>
+            </a>
+        </li>
+        <li>
+            <a class="nav-link" href="./maps.html">
+                <i class="nc-icon nc-pin-3"></i>
+                <p>Maps</p>
+            </a>
+        </li>
+        <li>
+            <a class="nav-link" href="./notifications.html">
+                <i class="nc-icon nc-bell-55"></i>
+                <p>Notifications</p>
+            </a>
+        </li>
+        <li class="nav-item active active-pro">
+            <a class="nav-link active" href="upgrade.html">
+                <i class="nc-icon nc-alien-33"></i>
+                <p>Upgrade to PRO</p>
+            </a>
+        </li>*@
                 </ul>
             </div>
 
