--- a/dbtest2/Views/Home/TableList.cshtml
+++ b/dbtest2/Views/Home/TableList.cshtml
@@ -22,7 +22,8 @@
                             <tr>
                                 <td>@item.Car_ID</td>
                                 <td>@item.CarNum</td>
-                                <td>@item.InTime.ToString("yyyy-MM-dd HH:mm:ss")</td>
+                                <td>@item.InTime.ToString("yyyy-MM-dd HH:mm")</td>
+                                @*<td>@item.InTime.ToString("yyyy-MM-dd HH:mm:ss")</td>*@
                                 <td>@item.Owner_Name</td>
                             </tr>
                             }
