[#25] DapperHelper 클래스 생성
- db 커넥션 스트링의 반복을 줄이기 위해
- 라이브러리 클래스 생성 후 참조 추가

- 입차시 차량 번호 alert

--- a/dbtest2/Views/Home/TableInsert.cshtml
+++ b/dbtest2/Views/Home/TableInsert.cshtml
@@ -18,6 +18,7 @@
                         <div class="row m-t-30">
                             <div class="col-md-12">
                                 <button type="submit" class="btn btn-primary btn-md btn-block waves-effect waves-light text-center m-b-20">입차</button>
+                                @*<button type="submit" onclick="btn1_click();" class="btn btn-primary btn-md btn-block waves-effect waves-light text-center m-b-20">입차</button>*@
                             </div>
                         </div>
                         <hr />
@@ -29,6 +30,10 @@
     </div>
 </div>
 
-
+<script>
+    function btn1_click() {
+        alert("입차했습니다.");
+    }
+</script>
 
 
